Social icon fix (#334)
* Added social icon svg's, added image component for social icons instead of just having them set as a background on a div, made the icons display a little bit bigger than before

* Changed mobile nav footer to use Image component, lowered the font size for the links as it seemed too big

* Updated snapshot

* Made mobile nav footer styles the same as the footer

* fix to the src on image component

* Updated snapshot

--- a/packages/reference/client/scss/60_components/_c-footer.scss
+++ b/packages/reference/client/scss/60_components/_c-footer.scss
@@ -17,29 +17,28 @@
   }
 
   &__social {
-    margin-top: $global-spacing-unit-small;
+    margin: $global-spacing-unit 0;
     text-align: center;
 
     &-text {
       font-size: 0.9em;
     }
 
-    &-facebook, &-instagram, &-twitter {
-      display: inline-block;
-      width: 50px;
-      height: 50px;
-    }
+    &-links {
+      margin: $global-spacing-unit-small;
 
-    &-facebook {
-      background: url('/static/facebook.svg') no-repeat center;
-    }
+      div {
+        display: inline-block;
+        margin-right: $global-spacing-unit-tiny;
 
-    &-instagram {
-      background: url('/static/instagram.svg') no-repeat center;
-    }
+        &:first-child {
+          margin-left: $global-spacing-unit-tiny;
+        }
+      }
 
-    &-twitter {
-      background: url('/static/twitter.svg') no-repeat center;
+      img {
+        width: 35px;
+      }
     }
   }
 }
